# notebook_setup

./: Example.ipynb  LICENSE  README.md  pyproject.toml
notebook_setup/: __init__.py
