[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
description = 'Tools to setup and configure jupyter notebooks (ipynb files) with line and cell magic'
keywords = [
    "ipynb",
    "notebook",
    "jupyter",
    "line magic",
    "cell magic",
    "autoreload",
    "plotly render",
]
license = "MIT"
name = "notebook_setup2"
readme = "README.md"
requires-python = ">=3.7"
version = "1.3"

dependencies = ["ipython", "ipykernel"]

[project.urls]
homepage = "https://github.com/1081/notebook_setup2"

[tool.hatch.build.targets.wheel]
packages = ["notebook_setup2"]

[tool.ruff]
ignore = ["E501", "C408", "PD901"]
select = [
    "E",
    "W",
    "N",
    "I",
    "UP",
    "F",
    "B",
    "C4",
    "SIM",
    "TCH",
    "PD",
    "NPY",
    "DTZ",
]
show-fixes = true

[tool.black]
line-length = 120
